<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".SignupActivity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/urban_image"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conformPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conform_password"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:maxLines="1"
                android:focusable="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
